--- a/index.html
+++ b/index.html
@@ -94,18 +94,6 @@ h1{margin-bottom:20px;}
 }
 
 /* Reveal Image */
-.reveal{
-  width:260px;
-  height:360px;
-  overflow:hidden;
-  border-radius:20px;
-  box-shadow:0 0 30px red;
-  position:relative;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-}
-
 .reveal img{
   width:100%;
   height:100%;
@@ -117,7 +105,7 @@ h1{margin-bottom:20px;}
 }
 
 .reveal img.show{
-  bottom:0;
+  left:0;
 }
 
 /* Proposal Page */
@@ -259,3 +247,4 @@ function fireworks(){
 
 </body>
 </html>
+
