--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@ h1{margin-bottom:20px;}
   from{text-shadow:0 0 5px pink;}
   to{text-shadow:0 0 25px hotpink;}
 }
+  /* Reveal Image */
+.reveal{
+  width:260px;
+  height:360px;
+  overflow:hidden;
+  border-radius:20px;
+  box-shadow:0 0 30px red;
+  position:relative;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+} 
 
 /* Reveal Image */
 .reveal img{
@@ -247,4 +259,5 @@ function fireworks(){
 
 </body>
 </html>
+
 
