--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ for(let i=0;i<40;i++){
 
 <!-- Page 2 -->
 <div class="page" id="p2">
-<h1>Play Music For Us 🎶</h1>
+<h1>Play Music For u 🎶</h1>
 <button class="btn" onclick="play()">Play ▶</button>
 </div>
 
@@ -259,5 +259,6 @@ function fireworks(){
 
 </body>
 </html>
+
 
 
